[project]
name = "easy-comfy-nodes-next"
description = "A collection of utility nodes primarily for interacting with comfy via automated systems"
version = "2.0.0"
license = { text = "MIT License" }
dependencies = [
    "requests",
    "boto3",
    "rembg",
    "pillow-avif-plugin",
    "pillow-heif",
]

[project.urls]
Repository = "https://github.com/naporin0624/easy-comfy-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "naporin0624"
DisplayName = "easy-comfy-nodes-next"
Icon = ""

[tool.uv]
dev-dependencies = [
    "python-dotenv>=1.0.1",
]
